--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,4 +16,4 @@ phases:
       - echo Build completed on `date`
 artifacts:
   files:
-    - target/code-build-1.0-SNAPSHOT.jar
+    - target/code-build.jar
