--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>code-build</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
